--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
             <h2 class="headline">Sua próxima viagem:</h2>
             <h1>Conheça Busan</h1>
         </header>
+
+        <section id="description-image">
+            <img src="assets/Image_01.jpg" alt="Imagem da cidade de Busan">
+            <p class="subtitle">Busan, a estrela em ascensão da Coreia do Sul, oferece de tudo, desde churrascarias de primeira linha até tradicionais barracas de comida de rua. Aqui, exploramos a segunda cidade da Coreia do Sul e descobrimos as suas ofertas culinárias.</p>
+        </section>
     </main>
 </body>
 </html>
