Ajuste na indentação e correção no h1

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <main id="container">
-        <header id="title">
+        <header id="title-page">
             <h2 class="headline">Sua próxima viagem:</h2>
             <h1>Conheça Busan</h1>
         </header>
@@ -26,8 +26,11 @@
             <!-- CRIAR O ELEMENTO DIVISOR -->
 
             <section id="title-list">
-                <h2 class="headline">Para os amantes de história</h2>
-                <h2>Descubra 3 destinos perdíveis em Busan</h2>
+                <section id="title">
+                    <h2 class="headline">Para os amantes de história</h2>
+                    <h2>Descubra 3 destinos perdíveis em Busan</h2>
+                </section>
+
                 <p>As atrações de Busan vão desde templos budistas centenários que pontilham as montanhas e o litoral da cidade até praias imaculadas com águas cristalinas. Esta cidade litorânea tem muitas coisas para fazer o ano todo - as famílias podem passar o tempo em um aquário à beira-mar, os compradores podem explorar bairros vibrantes e os amantes da natureza podem desfrutar de longas caminhadas até mirantes panorâmicos. Os santuários budistas que pontilham a costa e as montanhas de Busan têm uma arquitetura impressionante que irá encantar os fotógrafos.</p>
             </section>
 
