Criação do elemento divisor

--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
 
         <section id="content-list">
 
-            <!-- CRIAR O ELEMENTO DIVISOR -->
+            <!-- ELEMENTO DIVISOR -->
+            <div class="divisor"></div>
 
             <section id="title-list">
                 <section id="title">
