--- a/index.html
+++ b/index.html
@@ -37,7 +37,31 @@
             </section>
 
             <section id="list">
+                <article class="card-travel">
+                    <img src="assets/Image_02.jpg" alt="Imagem do Templo Haedong Yonggungsa">
 
+                    <div class="content-card">
+                        <h3>1. Templo Haedong Yonggungsa</h3>
+                        <p>O Templo Haedong Yonggungsa é um templo budista localizado no extremo nordeste de Busan. Construído em 1376, é um dos poucos templos na Coreia construídos à beira-mar – você pode desfrutar de vistas do Mar do Leste de um lado e de belas montanhas do outro. </p>
+                        
+                    </div>
+                </article>
+
+                <article class="card-travel">
+                    <img src="assets/Image_03.jpg" alt="Imagem do Templo Beomeo-sa">
+
+                    <div class="content-card">
+
+                    </div>                    
+                </article>
+
+                <article class="card-travel">
+                    <img src="assets/Image_04.jpg" alt="Imagem do Parque Yongdusan">
+                    
+                    <div class="content-card">
+
+                    </div>
+                </article>
             </section>
         </section>
     </main>
