--- a/index.html
+++ b/index.html
@@ -43,7 +43,9 @@
                     <div class="content-card">
                         <h3>1. Templo Haedong Yonggungsa</h3>
                         <p>O Templo Haedong Yonggungsa é um templo budista localizado no extremo nordeste de Busan. Construído em 1376, é um dos poucos templos na Coreia construídos à beira-mar – você pode desfrutar de vistas do Mar do Leste de um lado e de belas montanhas do outro. </p>
-                        
+                        <br>
+                        <h6>Bom para:</h6>
+                        <p class="accent-blue">História</p>
                     </div>
                 </article>
 
