--- a/index.html
+++ b/index.html
@@ -53,7 +53,11 @@
                     <img src="assets/Image_03.jpg" alt="Imagem do Templo Beomeo-sa">
 
                     <div class="content-card">
-
+                        <h3>2. Templo Beomeo-sa</h3>
+                        <p>O Templo Beomeo-sa é um dos maiores santuários da Coreia do Sul. Ele está localizado no alto da borda leste da montanha Geumjeongsa e fica distante da agitação da cidade. O Daeungjeon Hall do templo é um exemplo bem preservado da arquitetura da Dinastia Joseon. </p>
+                        <br>
+                        <h6>Bom para:</h6>
+                        <p class="accent-blue">História</p>
                     </div>                    
                 </article>
 
@@ -61,7 +65,13 @@
                     <img src="assets/Image_04.jpg" alt="Imagem do Parque Yongdusan">
                     
                     <div class="content-card">
-
+                        <h3>3. Parque Yongdusan</h3>
+                        <p>O Parque Yongdusan, localizado no centro de Busan, abriga alguns dos monumentos mais importantes da cidade. Você pode ver vistas espetaculares do topo da Torre Busan, de 120 metros de altura. O parque tem 2 museus – confira os instrumentos musicais tradicionais no Museum of World Folk Instruments e mais de 80 veleiros coreanos no Exhibition Hall of World Model Boats. </p>
+                        <br>
+                        <h6>Bom para:</h6>
+                        <p class="accent-purple">Casais</p>
+                        <p class="accent-pink">Famílias</p>
+                        <p class="accent-orange">Orçamento</p>
                     </div>
                 </article>
             </section>
