--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
         </section>
 
         <section id="content-list">
-
             <!-- ELEMENTO DIVISOR -->
             <div class="divisor"></div>
 
@@ -75,7 +74,17 @@
                     </div>
                 </article>
             </section>
+
         </section>
+
+        <!-- ELEMENTO DIVISOR -->
+        <div class="divisor"></div>
+
+        <p>As melhores coisas para fazer em Busan mostram a reputação da cidade como um importante porto marítimo na Ásia. Frequentemente vista como a essência da Coreia do Sul, você experimentará uma atmosfera única em termos de diversidade étnica e cultural, já que a cidade recebe um público cosmopolita o ano todo. </p>
     </main>
+    
+    <footer>
+        <p>Feito com <img src="assets/coracao-icone.svg" alt="Coração"> por Lorenzo Jorge.</p>
+    </footer>
 </body>
 </html>
