--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Conheça Busan</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon">
 </head>
 <body>
     <main id="container">
@@ -82,7 +83,7 @@
 
         <p>As melhores coisas para fazer em Busan mostram a reputação da cidade como um importante porto marítimo na Ásia. Frequentemente vista como a essência da Coreia do Sul, você experimentará uma atmosfera única em termos de diversidade étnica e cultural, já que a cidade recebe um público cosmopolita o ano todo. </p>
     </main>
-    
+
     <footer>
         <p>Feito com <img src="assets/coracao-icone.svg" alt="Coração"> por Lorenzo Jorge.</p>
     </footer>
